csbind/joltc_bindgen.cs

        public const uint JPH_CollectFacesMode_JPH_CollectFacesMode_NoFaces = 1;
        public const uint JPH_CollectFacesMode__JPH_CollectFacesMode_Count = 2;
        public const uint JPH_CollectFacesMode__JPH_CollectFacesMode_Force32 = 2147483647;
        public const uint JPH_MotorState_JPH_MotorState_Off = 0;
        public const uint JPH_MotorState_JPH_MotorState_Velocity = 1;
        public const uint JPH_MotorState_JPH_MotorState_Position = 2;
        public const uint JPH_MotorState__JPH_MotorState_Count = 3;
        public const uint JPH_MotorState__JPH_MotorState_Force32 = 2147483647;
        public const uint JPH_CollisionCollectorType_JPH_CollisionCollectorType_AllHit = 0;
        public const uint JPH_CollisionCollectorType_JPH_CollisionCollectorType_AllHitSorted = 1;
        public const uint JPH_CollisionCollectorType_JPH_CollisionCollectorType_ClosestHit = 2;
        public const uint JPH_CollisionCollectorType_JPH_CollisionCollectorType_AnyHit = 3;
        public const uint JPH_CollisionCollectorType__JPH_CollisionCollectorType_Count = 4;
        public const uint JPH_CollisionCollectorType__JPH_CollisionCollectorType_Force32 = 2147483647;
        public const uint JPH_SixDOFConstraintAxis_JPH_SixDOFConstraintAxis_TranslationX = 0;
        public const uint JPH_SixDOFConstraintAxis_JPH_SixDOFConstraintAxis_TranslationY = 1;
        public const uint JPH_SixDOFConstraintAxis_JPH_SixDOFConstraintAxis_TranslationZ = 2;
        public const uint JPH_SixDOFConstraintAxis_JPH_SixDOFConstraintAxis_RotationX = 3;
        public const uint JPH_SixDOFConstraintAxis_JPH_SixDOFConstraintAxis_RotationY = 4;
        public const uint JPH_SixDOFConstraintAxis_JPH_SixDOFConstraintAxis_RotationZ = 5;
        public const uint JPH_SixDOFConstraintAxis__JPH_SixDOFConstraintAxis_Count = 6;
        public const uint JPH_SixDOFConstraintAxis__JPH_SixDOFConstraintAxis_Force32 = 2147483647;
        public const uint JPH_SpringMode_JPH_SpringMode_FrequencyAndDamping = 0;
        public const uint JPH_SpringMode_JPH_SpringMode_StiffnessAndDamping = 1;
        public const uint JPH_SpringMode__JPH_SpringMode_Count = 2;
        public const uint JPH_SpringMode__JPH_SpringMode_Force32 = 2147483647;
        public const uint JPH_SoftBodyConstraintColor_JPH_SoftBodyConstraintColor_ConstraintType = 0;
        public const uint JPH_SoftBodyConstraintColor_JPH_SoftBodyConstraintColor_ConstraintGroup = 1;
        public const uint JPH_SoftBodyConstraintColor_JPH_SoftBodyConstraintColor_ConstraintOrder = 2;
        public const uint JPH_SoftBodyConstraintColor__JPH_SoftBodyConstraintColor_Count = 3;
        public const uint JPH_SoftBodyConstraintColor__JPH_SoftBodyConstraintColor_Force32 = 2147483647;
        public const uint JPH_BodyManager_ShapeColor_JPH_BodyManager_ShapeColor_InstanceColor = 0;
        public const uint JPH_BodyManager_ShapeColor_JPH_BodyManager_ShapeColor_ShapeTypeColor = 1;
        public const uint JPH_BodyManager_ShapeColor_JPH_BodyManager_ShapeColor_MotionTypeColor = 2;
        public const uint JPH_BodyManager_ShapeColor_JPH_BodyManager_ShapeColor_SleepColor = 3;
        public const uint JPH_BodyManager_ShapeColor_JPH_BodyManager_ShapeColor_IslandColor = 4;
        public const uint JPH_BodyManager_ShapeColor_JPH_BodyManager_ShapeColor_MaterialColor = 5;
        public const uint JPH_BodyManager_ShapeColor__JPH_BodyManager_ShapeColor_Count = 6;
        public const uint JPH_BodyManager_ShapeColor__JPH_BodyManager_ShapeColor_Force32 = 2147483647;
        public const uint JPH_DebugRenderer_CastShadow_JPH_DebugRenderer_CastShadow_On = 0;
        public const uint JPH_DebugRenderer_CastShadow_JPH_DebugRenderer_CastShadow_Off = 1;
        public const uint JPH_DebugRenderer_CastShadow__JPH_DebugRenderer_CastShadow_Count = 2;
        public const uint JPH_DebugRenderer_CastShadow__JPH_DebugRenderer_CastShadow_Force32 = 2147483647;
        public const uint JPH_DebugRenderer_DrawMode_JPH_DebugRenderer_DrawMode_Solid = 0;
        public const uint JPH_DebugRenderer_DrawMode_JPH_DebugRenderer_DrawMode_Wireframe = 1;
        public const uint JPH_DebugRenderer_DrawMode__JPH_DebugRenderer_JPH_DebugRenderer_DrawMode_Count = 2;
        public const uint JPH_DebugRenderer_DrawMode__JPH_DebugRenderer_JPH_DebugRenderer_DrawMode_Force32 = 2147483647;


        [DllImport(__DllName, EntryPoint = "JPH_Init", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool JPH_Init();

        [DllImport(__DllName, EntryPoint = "JPH_Shutdown", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_Shutdown();

        [DllImport(__DllName, EntryPoint = "JPH_SetTraceHandler", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_SetTraceHandler(delegate* unmanaged[Cdecl]<byte*, void> handler);

        [DllImport(__DllName, EntryPoint = "JPH_SetAssertFailureHandler", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_SetAssertFailureHandler(delegate* unmanaged[Cdecl]<byte*, byte*, byte*, uint, bool> handler);

        [DllImport(__DllName, EntryPoint = "JPH_BroadPhaseLayerInterfaceMask_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_BroadPhaseLayerInterface* JPH_BroadPhaseLayerInterfaceMask_Create(uint numBroadPhaseLayers);

        [DllImport(__DllName, EntryPoint = "JPH_BroadPhaseLayerInterfaceMask_ConfigureLayer", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_BroadPhaseLayerInterfaceMask_ConfigureLayer(JPH_BroadPhaseLayerInterface* bpInterface, byte broadPhaseLayer, uint groupsToInclude, uint groupsToExclude);

        [DllImport(__DllName, EntryPoint = "JPH_BroadPhaseLayerInterfaceTable_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_BroadPhaseLayerInterface* JPH_BroadPhaseLayerInterfaceTable_Create(uint numObjectLayers, uint numBroadPhaseLayers);

        [DllImport(__DllName, EntryPoint = "JPH_BroadPhaseLayerInterfaceTable_MapObjectToBroadPhaseLayer", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_BroadPhaseLayerInterfaceTable_MapObjectToBroadPhaseLayer(JPH_BroadPhaseLayerInterface* bpInterface, ushort objectLayer, byte broadPhaseLayer);

        [DllImport(__DllName, EntryPoint = "JPH_ObjectLayerPairFilterMask_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_ObjectLayerPairFilter* JPH_ObjectLayerPairFilterMask_Create();

        [DllImport(__DllName, EntryPoint = "JPH_ObjectLayerPairFilterMask_GetObjectLayer", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern ushort JPH_ObjectLayerPairFilterMask_GetObjectLayer(uint group, uint mask);

        [DllImport(__DllName, EntryPoint = "JPH_ObjectLayerPairFilterMask_GetGroup", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_ObjectLayerPairFilterMask_GetGroup(ushort layer);

        [DllImport(__DllName, EntryPoint = "JPH_ObjectLayerPairFilterMask_GetMask", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_ObjectLayerPairFilterMask_GetMask(ushort layer);

        [DllImport(__DllName, EntryPoint = "JPH_ObjectLayerPairFilterTable_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_ObjectLayerPairFilter* JPH_ObjectLayerPairFilterTable_Create(uint numObjectLayers);

        [DllImport(__DllName, EntryPoint = "JPH_ObjectLayerPairFilterTable_DisableCollision", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_ObjectLayerPairFilterTable_DisableCollision(JPH_ObjectLayerPairFilter* objectFilter, ushort layer1, ushort layer2);

        [DllImport(__DllName, EntryPoint = "JPH_ObjectLayerPairFilterTable_EnableCollision", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_ObjectLayerPairFilterTable_EnableCollision(JPH_ObjectLayerPairFilter* objectFilter, ushort layer1, ushort layer2);

        [DllImport(__DllName, EntryPoint = "JPH_ObjectLayerPairFilterTable_ShouldCollide", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool JPH_ObjectLayerPairFilterTable_ShouldCollide(JPH_ObjectLayerPairFilter* objectFilter, ushort layer1, ushort layer2);

        [DllImport(__DllName, EntryPoint = "JPH_ObjectVsBroadPhaseLayerFilterMask_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_ObjectVsBroadPhaseLayerFilter* JPH_ObjectVsBroadPhaseLayerFilterMask_Create(JPH_BroadPhaseLayerInterface* broadPhaseLayerInterface);

        [DllImport(__DllName, EntryPoint = "JPH_ObjectVsBroadPhaseLayerFilterTable_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_ObjectVsBroadPhaseLayerFilter* JPH_ObjectVsBroadPhaseLayerFilterTable_Create(JPH_BroadPhaseLayerInterface* broadPhaseLayerInterface, uint numBroadPhaseLayers, JPH_ObjectLayerPairFilter* objectLayerPairFilter, uint numObjectLayers);

        [DllImport(__DllName, EntryPoint = "JPH_DrawSettings_InitDefault", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_DrawSettings_InitDefault(JPH_DrawSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_PhysicsSystem* JPH_PhysicsSystem_Create(JPH_PhysicsSystemSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_Destroy", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_PhysicsSystem_Destroy(JPH_PhysicsSystem* system);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_SetPhysicsSettings", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_PhysicsSystem_SetPhysicsSettings(JPH_PhysicsSystem* system, JPH_PhysicsSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_GetPhysicsSettings", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_PhysicsSystem_GetPhysicsSettings(JPH_PhysicsSystem* system, JPH_PhysicsSettings* result);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_OptimizeBroadPhase", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_PhysicsSystem_OptimizeBroadPhase(JPH_PhysicsSystem* system);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_Update", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_PhysicsSystem_Update(JPH_PhysicsSystem* system, float deltaTime, int collisionSteps);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_Step", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_PhysicsSystem_Step(JPH_PhysicsSystem* system, float deltaTime, int collisionSteps);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_GetBodyInterface", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_BodyInterface* JPH_PhysicsSystem_GetBodyInterface(JPH_PhysicsSystem* system);
